--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.4",
+    "apollo-link-context": "^1.0.19",
     "graphql": "^14.5.6",
     "react": "^16.9.0",
     "react-apollo": "^3.1.1",
     "react-dom": "^16.9.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1"
   },
   "scripts": {
